# hea-without-barren-plateaus

./: README.md  hea_grad_1d.py  hea_grad_2d.py  solve_hei1d.py  utils.py
mbl-transition-cpp/: CMakeLists.txt  requirements.txt  setup.py
mbl-transition-cpp/python_tests/: test_ibm_unitary.py  test_unitary.py
mbl-transition-cpp/src/: binding.cpp  runner_mpi.cpp  utils.cpp  utils.hpp
